// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"Incorrect

const self = this;
      ~~~~ Unexpected aliasing of 'this' to local variable.

setTimeout(function () {
  self.doWork();
});
"
`;

exports[` 2`] = `
"Correct

setTimeout(() => {
  this.doWork();
});
"
`;

exports[` 3`] = `
"Incorrect
Options: { "allowDestructuring": false }

class ComponentLike {
  props: unknown;
  state: unknown;

  render() {
    const { props, state } = this;
          ~~~~~~~~~~~~~~~~ Unexpected aliasing of members of 'this' to local variables.

    console.log(props);
    console.log(state);
  }
}
"
`;

exports[` 4`] = `
"Correct
Options: { "allowDestructuring": false }

class ComponentLike {
  props: unknown;
  state: unknown;

  render() {
    console.log(this.props);
    console.log(this.state);
  }
}
"
`;

exports[` 5`] = `
"Incorrect
Options: { "allowedNames": ["self"] }

class Example {
  method() {
    const that = this;
          ~~~~ Unexpected aliasing of 'this' to local variable.
  }
}
"
`;

exports[` 6`] = `
"Correct
Options: { "allowedNames": ["self"] }

class Example {
  method() {
    const self = this;
  }
}
"
`;
